# sagemaker-llm-endpoint

./: CHECK.md  CLAUDE.md  DEBUGGING.md  README.md  cookbook.md  pyproject.toml
.github/workflows/: deploy.yml
docs/: sagemaker_quotas.md
infra/: INTEGRATED.md  README.md  STANDALONE.md  delete-full-stack.sh  deploy-full-stack.sh  full-stack.yaml
lambda/openai-proxy/: README.md  pyproject.toml
lambda/openai-proxy/src/openai_proxy/: handler.py
openwebui/: .env.example  setup.sh
scripts/: README.md  pyproject.toml
scripts/src/sagemaker_tools/: cleanup.py  deploy_vllm.py  test_api_gateway.py  test_openai_endpoint.py
