[project]
name = "sagemaker-using-model"
version = "1.0.0"
description = "Deploy HuggingFace LLMs on AWS SageMaker with OpenAI-compatible API and OpenWebUI"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["sagemaker", "vllm", "openai", "lambda", "openwebui", "aws"]

[dependency-groups]
dev = [
    "commitizen>=4.12.0",
    "ruff>=0.3.0",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
version_files = [
    "pyproject.toml:^version",
    "lambda/openai-proxy/pyproject.toml:^version",
    "scripts/pyproject.toml:^version"
]
tag_format = "v$version"
update_changelog_on_bump = false
major_version_zero = true
