[project]
name = "sagemaker-tools"
version = "1.0.0"
description = "Tools for deploying and testing SageMaker vLLM endpoints"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "moto[sagemaker]>=5.0.0",
    "ruff>=0.3.0",
]

[project.scripts]
deploy-vllm = "sagemaker_tools.deploy_vllm:main"
test-endpoint = "sagemaker_tools.test_openai_endpoint:main"
cleanup = "sagemaker_tools.cleanup:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sagemaker_tools"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
